# FTL

./: .gitignore  CMakeLists.txt  build.sh
.github/: Dockerfile
.github/workflows/: build.yml  codeql.yml  merge-conflict.yml
patch/: civetweb.sh
patch/civetweb/: 0001-add-pihole-mods.patch
src/: CMakeLists.txt  FTL.h  args.c  daemon.c  datastructure.c  datastructure.h  dnsmasq_interface.c  edns0.c  enums.h  gc.c  log.c  lookup-table.c  lookup-table.h  resolve.c  shmem.c  shmem.h  signals.c
src/api/: 2fa.c  action.c  api.c  auth.c  auth.h  config.c  info.c  list.c  queries.c  stats.c  stats_database.c  teleporter.c
src/config/: cli.c  config.c  config.h  dnsmasq_config.c  env.c  legacy_reader.c  password.c  setupVars.c  toml_helper.c  toml_writer.c  validator.c  validator.h
src/database/: common.c  database-thread.c  gravity-db.c  gravity-db.h  message-table.c  network-table.c  query-table.c  session-table.c
src/dnsmasq/: auth.c  cache.c  config.h  crypto.c  dhcp-common.c  dhcp.c  dhcp6.c  dnsmasq.c  dnsmasq.h  dnssec.c  domain.c  dump.c  edns0.c  forward.c  helper.c  lease.c  log.c  network.c  option.c  rfc1035.c  rfc2131.c  rfc3315.c  util.c
src/dotdoh/: CMakeLists.txt  framing.c  framing.h  proxy.c  proxy.h  registry.c  registry.h  tls_client.c  tls_client.h  upstream_uri.c  upstream_uri.h
src/ntp/: client.c
test/: civetweb_handshake_cpu.sh  dnsmasq_warnings  dotdoh.bats  dotdoh_regression.c  dotdoh_shim.py  pihole.toml  run.sh  test_final.bats  test_suite.bats  x509_read.expected  x509_read_key.expected  zone_update.py
tools/: macvendor.py
(+28 files in other folders)
